<resources>
    <string name="app_name">eCarNet</string>
    <string name="app_version">Version %1$s (%2$d)</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_fill_up">Ajouter un plein</string>

    <string name="title_fragment_home">Accueil</string>
    <string name="title_fragment_gas">Pleins d\'essence</string>
    <string name="title_fragment_operations">Interventions</string>
    <string name="title_fragment_share">Partages</string>
    <string name="title_fragment_memos">Rappels</string>
    <string name="title_fragment_tags">Mes tags NFC</string>
    <string name="add">Ajouter</string>

    <string name="title_activity_customize_car">Dites-nous en plus sur votre </string>

    <string name="fragment_gas_kmTotal">Compteur total</string>
    <string name="fragment_gas_qte">Quantité</string>
    <string name="fragment_gas_price">Prix</string>


    <string name="title_activity_add_car">Modèle et Finitions</string>
    <string name="title_activity_cars_management">CarsManagementActivity</string>
    <string name="title_activity_cars_mgmt">CarsMgmtActivity</string>
    <string name="title_activity_add_user">AddUserActivity</string>
    <string name="title_activity_car_search">CarSearchActivity</string>
    <string name="site_url">www.ecarnet.fr</string>

    <string name="title_activity_about">À propos</string>
    <string name="keep_in_touch_text">Suivez-nous sur les réseaux sociaux pour obtenir de l\'aide, disposer des dernières informations, nous aider à améliorer eCarNet et construire une grande communauté d\'utilisateurs</string>
    <string name="title_activity_add_operation">Ajouter une intervention</string>
    <string name="addPicture">Ajouter photo</string>
    <string name="addCover">Ajouter couverture</string>
    <string name="last_edit_memo">Dernière modification : %1$s</string>
    <string name="operationDataNotFound">Aucune donnée</string>
    <string name="averageOperationPrice">%1$,.2f €</string>
    <string name="averageOperationPriceTitle">Coût moyen</string>
    <string name="totalOperationPriceTitle">Montant annuel</string>
    <string name="operationTitle">Description</string>
    <string name="operationCost">Montant</string>
    <string name="operationDate">Date</string>
    <string name="name_text_view">Nom</string>

    <string name="no_nfc_description">Le NFC n\'est pas activé\nsur votre téléphone</string>
    <string name="write_tag_description">Appuyez ici pour\nmarquer une puce</string>
    <string name="writing_tag_description">Scannez la puce pour\nla marquer...</string>
    <string name="written_tag_description">La puce a été marquée\navec succès !</string>

    <!-- Dialog strings -->
    <string name="dialog_ok">OK</string>
    <string name="dialog_yes">Oui</string>
    <string name="dialog_no">Non</string>
    <string name="dialog_delete_element">Supprimer l\'élément sélectionné ?</string>
    <string name="dialog_delete_elements">Supprimer les %1$d éléments sélectionnés ?</string>

    <!-- Lists views strings -->
    <string name="no_item_found">Aucun élément trouvé.</string>
    <string name="no_item_found_new_item">Pour en créer un, touchez\nle bouton ci-dessous</string>
    <string name="no_intervention_found">Aucune intervention trouvée</string>
    <string name="no_intervention_found_new_item">Pour en créer une, touchez\nle bouton ci-dessous</string>
    <string name="no_memo_found">Aucun rappel trouvé</string>
    <string name="no_tag_found">Aucun tag trouvé</string>

    <!-- Add reminder strings -->
    <string name="add_reminder">Ajouter un rappel</string>
    <string name="edit_reminder">Modifier le rappel</string>

    <!-- Car's profile activity -->
    <string name="title_activity_car_profile">CarProfileActivity</string>
    <string name="pager_first_tab_title">Véhicule</string>
    <string name="pager_second_tab_title">Modèle</string>

    <!-- Home fragment -->
    <string name="chartKilomters">Kilométrage : %1$d km</string>
    <string name="unfinished_configuration_text">Nous avons détecté que la configuration de votre véhicule est incomplète.\nAfin d\'avoir accès à toutes les fonctionnalités d\'eCarNet, vous pouvez achever cette étape en cliquant sur le bouton ci-dessous.</string>
    <string name="no_fill_up_text">Tout est presque prêt !\nCommencez dès maintenant à renseigner les pleins d\'essence effectués sur ce véhicule.</string>
    <string name="no_intervention_text">Une intervention a été effectuée sur votre voiture ? Cliquez sur le bouton ci-dessous pour la renseigner.</string>

    <!-- Interventions fragment -->
    <string name="title_activity_history">Historique des interventions</string>
    <string name="empty_history_text">L\'historique est vide</string>
    <string name="edit_intervention">Modifier une intervention</string>


    <!-- Misc -->

    <string name="not_specified">Non renseigné</string>
    <string name="not_specified_f">Non renseignée</string>
    <string name="gears">rapports</string>
    <string name="unknown">Inconnu</string>
    <string name="chartDesciption">Description : %1$s</string>
    <string name="chartCost">Montant : %1$,.2f €</string>

</resources>

