<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.alpha12.ecarnet.fragments.GasFragment"
    android:orientation="vertical"
    >

    <!-- TODO: Update blank fragment layout -->

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/lastFillupCard"
        android:elevation="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/lastFillupTitle"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:text="Dernier plein d'essence"
                    android:textSize="24sp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/kmTotal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:textSize="14sp"
                    android:text="@string/fragment_gas_kmTotal"/>

                <TextView
                    android:id="@+id/qte"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:textSize="14sp"
                    android:text="@string/fragment_gas_qte"/>

                <TextView
                    android:id="@+id/price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:textSize="14sp"
                    android:text="@string/fragment_gas_price"/>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:src="@drawable/ic_mode_edit_black_36dp"
                    android:layout_gravity="right"
                    android:background="@color/cardview_light_background"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/qteChart"
        android:elevation="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp">

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/priceChart"
        android:elevation="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp">

    </android.support.v7.widget.CardView>

</LinearLayout>
